@startuml foco

class Usuario

class Foco{
- EstadoFoco estado
+ Encende()
+ Apagar()
+EstadoFoco LeerEstado()

}

class EstadoFoco
class SerieFocos{
    - Focos focos[10]
    + MostrarFocos()
    + EncenderFocos()
    + ApagarFocos()
}

Usuario o-- Foco
Foco *-- EstadoFoco
EstadoFoco --|> Texto
SerieFocos "1" *-- "10" Foco
Usuario o-- SerieFocos

@enduml